fix flex wrap

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -20,6 +20,7 @@
 
             list-style-type: none;
             display:flex;
+            flex-wrap: wrap;
             li{
                 margin-right:1rem;
                 font-weight: bold;
